--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
 <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 <style type="text/css">
 #shelter{
-	position	: absolute;
+	position	: fixed;
 	height		: 100%;
 	width		: 100%;
 	top			: 0px;
