--- a/web/index.html
+++ b/web/index.html
@@ -16,10 +16,12 @@
 }
 </style>
 <script type="text/javascript">
-	URL_ActionWithID = "cgi-bin/actionWithID"
-	URL_ListTask = "cgi-bin/listTask"
-	URL_AddTask = "cgi-bin/addTask"
-	URL_EditTask = "cgi-bin/editTask"
+	//ROOT_URL = "http://server2.zhchtd.com:28080/"
+	ROOT_URL = ""
+	URL_ActionWithID = ROOT_URL + "cgi-bin/actionWithID"
+	URL_ListTask = ROOT_URL + "cgi-bin/listTask"
+	URL_AddTask = ROOT_URL + "cgi-bin/addTask"
+	URL_EditTask = ROOT_URL + "cgi-bin/editTask"
 
 	listTask()
 	updateTaskdata()
@@ -150,7 +152,7 @@
 
 	update_task_ID = 0
 	function updateTaskdata(){
-		var int = setInterval(function(){
+		int = setInterval(function(){
 			if(document.getElementById("task_data")){
 				if(update_task_ID <= 0)
 					return
@@ -166,6 +168,16 @@
 		},3000)
 	}
 
+	function refreshCTRL(){
+		if(int == -1){
+			$("#refreshCTRL").text("停止刷新")
+			updateTaskdata()
+		}else {
+			$("#refreshCTRL").text("自动刷新")
+			clearInterval(int)
+			int = -1
+		}
+	}
 
 	/************************************************
 	 *	VIEW
@@ -198,7 +210,7 @@
 		//var container_min_width;
 
 		//var client_No_counter = 0;
-		for (i = 0; i < json.length; i++){
+		for (i = json.length-1; i >= 0 ; i--){
 			var tr = $("<tr></tr>");
 			var task_ID = $("<td onclick = getTask("+ json[i].task_ID +") ></td>");
 			var task_name = $("<td ></td>");
@@ -320,6 +332,7 @@
 					<button href="javascript:void(0)" id="addTask" onclick="showTask('',1,'')">添加</button>
 					<!-- <input  id="order_date" size="50"/> -->
 					<button href="javascript:void(0)" onclick="listTask()">查询</button>
+					<button href="javascript:void(0)" id="refreshCTRL" onclick="refreshCTRL()">停止刷新</button>
 				</div>
 				<div id="TaskList" style="width:80%;text-align:center;padding-left:10%"></div>
 	</div>
