--- a/web/index.html
+++ b/web/index.html
@@ -113,7 +113,7 @@
 				$("#shelter").css("display","none")
 				return;
 			}
-			frame = $("<iframe src='"+data.paramenter+"'></iframe>")
+			frame = $("<iframe src='"+data.parameter+"'></iframe>")
 			frame.hide()
 			$("#main").append(frame)
 			$("#shelter").css("display","none")
